Deploy/1database.yml
apiVersion: v1
kind: Namespace
metadata:
  name: logiflow
---
# 3. Deployment de Postgres
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
  namespace: logiflow
spec:
  selector:
    matchLabels:
      app: postgres-db
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: storage
              mountPath: /var/lib/postgresql/data
            # Montamos el script SQL en la carpeta especial de inicio
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: postgres-pvc-logiflow
        - name: init-script
          configMap:
            name: postgres-init-logiflow
---
# 4. Servicio (DNS Interno)
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: logiflow
spec:
  selector:
    app: postgres-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP # Uso interno (usa NodePort si quieres acceder desde fuera para debug)
